# MVP-W

./: .gitignore  CLAUDE.md  LICENSE  PRD.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
docs/: AFE_PRIORITY_ISSUE.md  COMMUNICATION_PROTOCOL.md  INTEGRATION_TEST_PLAN.md  VOICE_STREAM_PROTOCOL.md
firmware/mcu/: CMakeLists.txt  idf_build.bat  idf_run.sh  sdkconfig.defaults
firmware/mcu/main/: CMakeLists.txt  led_indicator.c  led_indicator.h  main.c  servo_control.c  servo_control.h  servo_math.c  servo_math.h  uart_handler.c  uart_handler.h  uart_protocol.c  uart_protocol.h
firmware/mcu/test_host/: CMakeLists.txt  test_servo_math.c  test_uart_protocol.c
firmware/s3/: CMakeLists.txt  HARDWARE_TEST.md  button_voice.c  button_voice.h  display_ui.c  partitions.csv  sdkconfig.defaults  uart_bridge.h
firmware/s3/components/sensecap-watcher/: sensecap-watcher.c
firmware/s3/docs/: WAKE_VAD_TEST_PLAN.md
firmware/s3/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  button_voice.c  button_voice.h  display_ui.c  display_ui.h  emoji_anim.c  emoji_anim.h  emoji_png.c  emoji_png.h  hal_audio.c  hal_audio.h  hal_button.c  hal_button.h  hal_display.c  hal_display.h  hal_opus.c  hal_opus.h  hal_wake_word.c  idf_component.yml  uart_bridge.c  wifi_client.c  ws_client.c  ws_client.h  ws_handlers.c  ws_handlers.h  ws_router.c  ws_router.h
firmware/s3/test_host/: CMakeLists.txt  test_ws_router.c
memory/: MEMORY.md
releases/v1.5.0/: README.md
server/: main.py
